--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"unorm": "^1.6.0",
-		"vite": "^3.0.8",
+		"vite": "^3.1.0-beta.0",
 		"whatwg-fetch": "^3.6.2"
 	},
 	"type": "module",
