use postcss `custom-properties` to have a clean limited support for CSS vars.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"@types/cookie": "^0.5.1",
 		"@vitejs/plugin-legacy": "^2.0.1",
 		"custom-event-polyfill": "^1.0.7",
+		"postcss": ">=8.4.6 <9.0.0",
+		"postcss-load-config": "^4.0.1",
+		"postcss-preset-env": "^7.8.0",
 		"regenerator-runtime": "^0.13.9",
 		"svelte": "npm:@tal500/svelte@3.49.0-repo-advanced-1",
 		"svelte-check": "^2.7.1",
