--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.456-legacy-builds-4",
+		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.469-legacy-builds-5",
 		"@types/cookie": "^0.5.1",
 		"@vitejs/plugin-legacy": "^2.0.1",
 		"custom-event-polyfill": "^1.0.7",
@@ -21,14 +21,14 @@
 		"postcss-load-config": "^4.0.1",
 		"postcss-preset-env": "^7.8.0",
 		"regenerator-runtime": "^0.13.9",
-		"svelte": "npm:@tal500/svelte@3.49.0-repo-advanced-1",
+		"svelte": "3.50.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"terser": "^5.15.0",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"unorm": "^1.6.0",
-		"vite": "^3.1.0-beta.0",
+		"vite": "3.1.0-beta.1",
 		"whatwg-fetch": "^3.6.2"
 	},
 	"type": "module",
