--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.469-legacy-builds-5",
+		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.475-legacy-builds-6",
 		"@types/cookie": "^0.5.1",
 		"@vitejs/plugin-legacy": "^2.0.1",
 		"custom-event-polyfill": "^1.0.7",
+		"import-meta-resolve": "^2.1.0",
 		"postcss": ">=8.4.6 <9.0.0",
 		"postcss-load-config": "^4.0.1",
 		"postcss-preset-env": "^7.8.0",
@@ -28,7 +29,7 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"unorm": "^1.6.0",
-		"vite": "3.1.0-beta.1",
+		"vite": "^3.1.0",
 		"whatwg-fetch": "^3.6.2"
 	},
 	"type": "module",
