--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.475-legacy-builds-6",
+		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.480-legacy-builds-7",
 		"@types/cookie": "^0.5.1",
 		"@vitejs/plugin-legacy": "^2.0.1",
+		"abortcontroller-polyfill": "^1.7.3",
 		"custom-event-polyfill": "^1.0.7",
 		"import-meta-resolve": "^2.1.0",
+		"path-composedpath-polyfill": "^0.0.1",
 		"postcss": ">=8.4.6 <9.0.0",
 		"postcss-load-config": "^4.0.1",
 		"postcss-preset-env": "^7.8.0",
