--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
-		"test": "playwright test",
+		"test-playwright": "playwright test",
+		"test-selenium": "node tests/selenium/run.js",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
@@ -15,7 +16,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.480-legacy-builds-7",
 		"@types/cookie": "^0.5.1",
-		"@vitejs/plugin-legacy": "^2.0.1",
+		"@vitejs/plugin-legacy": "^2.2.0",
 		"abortcontroller-polyfill": "^1.7.3",
 		"custom-event-polyfill": "^1.0.7",
 		"import-meta-resolve": "^2.1.0",
@@ -38,5 +39,9 @@
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"cookie": "^0.4.1"
+	},
+	"optionalDependencies": {
+		"@types/selenium-webdriver": "^4.1.5",
+		"selenium-webdriver": "^4.5.0"
 	}
 }
