--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,20 +42,20 @@ jobs:
         run: pnpm install --frozen-lockfile
       
       # Build Frontend
-      - name: Build Frontend
-        if: success() || failure() # Run even if previous failed
-        run: npm run build
+#       - name: Build Frontend
+#         if: success() || failure() # Run even if previous failed
+#         run: npm run build
       
       # Setup Nuget and install IE11 web driver
       - name: Setup NuGet.exe
         uses: nuget/setup-nuget@v1
       - name: Install IE11 Web Driver
-        run: nuget install Selenium.WebDriver.IEDriver -Version 4.5.0
+        run: nuget install Selenium.WebDriver.IEDriver -Version 4.5.0 && dir $pwd/Selenium.WebDriver.IEDriver.4.5.0
       
       # Run Selenium Tests
       - name: Test
         run: |
-          Add-Content $env:GITHUB_PATH $pwd
+          Add-Content $env:GITHUB_PATH $pwd/Selenium.WebDriver.IEDriver.4.5.0
           dir
           npm run preview & npm run test-selenium
         env:
