--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,9 +42,9 @@ jobs:
         run: pnpm install --frozen-lockfile
       
       # Build Frontend
-      - name: Build Frontend
-        if: success() || failure() # Run even if previous failed
-        run: npm run build
+#       - name: Build Frontend
+#         if: success() || failure() # Run even if previous failed
+#         run: npm run build
       
       # Setup Nuget and install IE11 web driver
       - name: Setup NuGet.exe
@@ -56,7 +56,7 @@ jobs:
       - name: Test
         run: |
           Add-Content $env:GITHUB_PATH $pwd\\Selenium.WebDriver.IEDriver.4.5.0\\driver
-          echo %PATH%
+          echo $env:GITHUB_PATH
           dir
           npm run preview & npm run test-selenium
         env:
