--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,14 +46,24 @@ jobs:
         if: success() || failure() # Run even if previous failed
         run: npm run build
       
-      # Setup Nuget and install IE11 web driver
+      # Setup Nuget and install IE11&Edge web drivers
       - name: Setup NuGet.exe
         uses: nuget/setup-nuget@v1
       - name: Install IE11 Web Driver
         run: nuget install Selenium.WebDriver.IEDriver -Version 4.5.0
+      - name: Install Edge Web Driver
+        run: |
+          $version = (Get-ItemProperty -Path HKCU:\Software\Microsoft\Edge\BLBeacon -Name version).version
+          echo "Current Edge Version: $version"
+          nuget install Selenium.WebDriver.MSEdgeDriver -Version $version
+          dir Selenium.WebDriver.MSEdgeDriver
       
       # Run Selenium Tests
-      - name: Selenium Tests
+      - name: Selenium Tests IE11
         run: |
           $Env:PATH += ";" + $pwd + "\Selenium.WebDriver.IEDriver.4.5.0\driver"
-          npm run preview & npm run test-selenium
+          npm run preview &
+          $Env:BROWSER = "edge"
+          npm run test-selenium
+          $Env:BROWSER = "ie"
+          npm run test-selenium
