--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"unorm": "^1.6.0",
-		"vite": "^3.1.0",
+		"vite": "^3.2.0-beta.3",
 		"whatwg-fetch": "^3.6.2"
 	},
 	"type": "module",
