--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.522-legacy-builds-8",
+		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.546-legacy-builds-9",
 		"@types/cookie": "^0.5.1",
 		"@vitejs/plugin-legacy": "^2.2.0",
 		"abortcontroller-polyfill": "^1.7.3",
@@ -26,15 +26,16 @@
 		"postcss": ">=8.4.6 <9.0.0",
 		"postcss-load-config": "^4.0.1",
 		"postcss-preset-env": "^7.8.0",
+		"proxy-polyfill": "^0.3.2",
 		"regenerator-runtime": "^0.13.9",
-		"svelte": "3.50.0",
+		"svelte": "^3.52.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
 		"terser": "^5.15.0",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"unorm": "^1.6.0",
-		"vite": "^3.2.0-beta.3",
+		"vite": "^3.2.3",
 		"whatwg-fetch": "^3.6.2"
 	},
 	"type": "module",
