--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "npm:@tal500/kit@1.0.0-next.546-legacy-builds-9",
+		"@sveltejs/kit": "npm:@tal500/kit@1.0.1-legacy-builds-10",
 		"@types/cookie": "^0.5.1",
-		"@vitejs/plugin-legacy": "^2.2.0",
+		"@vitejs/plugin-legacy": "^3.0.0",
 		"abortcontroller-polyfill": "^1.7.3",
 		"custom-event-polyfill": "^1.0.7",
 		"import-meta-resolve": "^2.1.0",
@@ -28,14 +28,14 @@
 		"postcss-preset-env": "^7.8.0",
 		"proxy-polyfill": "^0.3.2",
 		"regenerator-runtime": "^0.13.9",
-		"svelte": "^3.52.0",
+		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.6",
 		"terser": "^5.15.0",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"unorm": "^1.6.0",
-		"vite": "^3.2.3",
+		"vite": "^4.0.0",
 		"whatwg-fetch": "^3.6.2"
 	},
 	"type": "module",
