using try-catch in CI test workflow

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,9 +76,12 @@ jobs:
           } else {
             $TEST_SELENIUM_COMMAND = "npx percy exec -- npm run test-selenium"
           }
-          $Env:BROWSER = "ie"
-          $IE_RESULT = npm run test-selenium
-          $Env:BROWSER = "edge"
-          $EDGE_RESULT = Invoke-expression $TEST_SELENIUM_COMMAND
-          if ($IE_RESULT -ne 0) { exit $IE_RESULT }
-          if ($EDGE_RESULT -ne 0) { exit $EDGE_RESULT }
+          try {
+            $Env:BROWSER = "ie"
+            npm run test-selenium
+            $Env:BROWSER = "edge"
+            Invoke-expression $TEST_SELENIUM_COMMAND
+          } catch {
+            echo "Error during browser tests!"
+            exit 1
+          }
