--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -69,10 +69,22 @@ jobs:
           $destination = "edge-driver.zip"
           Invoke-RestMethod -Uri $url -OutFile $destination
           Expand-Archive $destination -DestinationPath "browser-stack-local"
-        
+      
+      - name: Check for BrowserStack secret availability
+        id: browser-stack-secret-check
+        # perform secret check & put boolean result as an output
+        shell: bash
+        env:
+          BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
+        run: |
+          if [ $BROWSERSTACK_ACCESS_KEY != '' ]; then
+            echo "available=true" >> $GITHUB_OUTPUT;
+          else
+            echo "available=false" >> $GITHUB_OUTPUT;
+          fi
       - name: 'BrowserStack Env Setup'
         uses: 'browserstack/github-actions/setup-env@master'
-        if: secrets.BROWSERSTACK_ACCESS_KEY
+        if: steps.browser-stack-secret-check.outputs.available
         with:
           username:  ${{ secrets.BROWSERSTACK_USERNAME }}
           access-key: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
