--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,7 +50,11 @@ jobs:
         if: success() || failure() # Run even if previous failed
         run: npm run build
       
-      # Setup Nuget and install IE11&Edge web drivers and BrowserStackLocal
+      - name: Start Preview Server
+        run:
+          npm run preview -- --host &
+      
+      # Setup Nuget and install IE11&Edge web drivers
       - name: Setup NuGet.exe
         uses: nuget/setup-nuget@v1
       - name: Install IE11 Web Driver
@@ -63,6 +67,26 @@ jobs:
           $destination = "edge-driver.zip"
           Invoke-RestMethod -Uri https://msedgedriver.azureedge.net/$version/edgedriver_win64.zip -OutFile $destination
           Expand-Archive $destination -DestinationPath "edge-driver"
+      - name: Selenium Tests on IE11 and Edge
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+        run: |
+          $Env:PATH += ";" + $pwd + "\edge-driver" + ";" + $pwd + "\Selenium.WebDriver.IEDriver.4.5.0\driver"
+          if ($null -eq $env:PERCY_TOKEN) {
+            $TEST_SELENIUM_COMMAND = "npm run test-selenium"
+          } else {
+            $TEST_SELENIUM_COMMAND = "npx percy exec -- npm run test-selenium"
+          }
+          $Env:BROWSER = "ie"
+          npm run test-selenium
+          if(!$?) { $HAD_FAILED = $true }
+          $Env:BROWSER = "edge"
+          Invoke-expression $TEST_SELENIUM_COMMAND
+          if(!$?) { $HAD_FAILED = $true }
+          if($HAD_FAILED) {
+            throw "One or more selenium tests had failed!"
+            exit 1
+          }
       
       - name: Check for BrowserStack secret availability
         id: browser-stack-secret-check
@@ -93,34 +117,13 @@ jobs:
           local-logging-level: 'all-logs'
           local-identifier: 'random'
       
-      # Run Selenium Tests
-      - name: Selenium Tests on BrowserStack, IE11 and Edge
+      - name: Selenium Tests on BrowserStack
+        if: steps.browser-stack-secret-check.outputs.available
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
         run: |
-          $Env:PATH += ";" + $pwd + "\edge-driver" + ";" + $pwd + "\Selenium.WebDriver.IEDriver.4.5.0\driver"
-          npm run preview -- --host &
-          if ($null -eq $env:PERCY_TOKEN) {
-            $TEST_SELENIUM_COMMAND = "npm run test-selenium"
-          } else {
-            $TEST_SELENIUM_COMMAND = "npx percy exec -- npm run test-selenium"
-          }
-          $HAD_FAILED = $false
-          if ($null -ne $env:BROWSERSTACK_ACCESS_KEY) {
-            $Env:BROWSER = "browser-stack"
-            npm run test-selenium
-            if(!$?) { $HAD_FAILED = $true }
-          }
-          $Env:BROWSER = "ie"
+          $Env:BROWSER = "browser-stack"
           npm run test-selenium
-          if(!$?) { $HAD_FAILED = $true }
-          $Env:BROWSER = "edge"
-          Invoke-expression $TEST_SELENIUM_COMMAND
-          if(!$?) { $HAD_FAILED = $true }
-          if($HAD_FAILED) {
-            throw "One or more selenium tests had failed!"
-            exit 1
-          }
 
       - name: 'Stop BrowserStackLocal'
         uses: 'browserstack/github-actions/setup-local@master'
